@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.1.9.5"
+  "version": "3.1.9.6"
 }
