@@ -14,6 +14,10 @@
     "add_ext_link": "div.esi-paywall|div.article__content",
     "add_ext_link_type": "archive.is"
   },
+  "Defector": {
+    "domain": "defector.com",
+    "remove_cookies_select_drop": ["lede_defector_user"]
+  },
   "DN.no (cached articles only)": {
     "domain": "dn.no",
     "allow_cookies": 1,
@@ -66,6 +70,11 @@
   },
   "Monocle": {
     "domain": "monocle.com",
+    "useragent": "googlebot"
+  },
+  "Quora (regwall)": {
+    "domain": "quora.com",
+    "allow_cookies": 1,
     "useragent": "googlebot"
   },
   "Schwäbische Zeitung": {
