@@ -6,6 +6,7 @@ Add GauchaZH
 Add VmnMedia.nl Group (opt-in to custom sites)
 Remove Weltkunst.de (fix obsolete)
 Fix Defector (cookie)
+Fix Quora (AI bot crash)
 Fix The Athletic (Kiwi)
 Fix TheTimes.co.uk (overlay)
 Fix TownNews sites (encrypted)
